# spacemesh-cuda

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
include/spacemesh_cuda/: spacemesh.h
rust/: Cargo.toml  build.rs
rust/src/: lib.rs
src/: spacemesh.cu  utils.hpp
src/device/: common.cuh  kernel.cuh  pbkdf2.cuh  romix.cuh
test/: perf.cu  test_kernel.cu
