[package]
authors = ["The 6block Team"]
edition = "2021"
include = ["Cargo.toml", "src", "LICENSE.md"]
license = "GPL-3.0"
name = "spacemesh-cuda"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.anyhow]
version = "1.0"

[build-dependencies]
cmake = {version = "0.1.0"}
